# vcpkg

./: README.md
My_work/antlr2/: CMakeLists.txt  CONTROL  portfile.cmake
My_work/blosc/: 0001-find-deps.patch  CONTROL  portfile.cmake
My_work/icu/: CONTROL  fix_parallel_build_on_windows.patch  portfile.cmake
My_work/lzma-c/: CMakeLists.txt  CONTROL  LICENSE  portfile.cmake
My_work/mimetic/: CMakeLists.txt  CONTROL  LICENSE  portfile.cmake
ports/bitmagic/: CMakeLists.txt  CONTROL  portfile.cmake
ports/bitmagic2/: portfile.cmake
ports/log4cxx/: portfile.cmake
ports/lzma/: CMakeLists.txt  CONTROL  portfile.cmake
ports/lzma-c/: CMakeLists.txt  CONTROL  LICENSE  portfile.cmake
savedLibrary/boost/: CONTROL  portfile.cmake  user-config.jam
savedLibrary/cryptopp/: CONTROL  portfile.cmake
savedLibrary/curl/: CONTROL  portfile.cmake
savedLibrary/tbb/: CONTROL  portfile.cmake
savedLibrary/zlib/: CONTROL  portfile.cmake
